2003-06-10  Jordi Mallach  <jordi@sindominio.net>

	* src/gnome-mud.c (main): Yet another embarrasing bugfix, initialize
	the gettext textdomain correctly, specifying UTF-8 as the codeset.

2003-06-09  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Update for 0.10.1.

	* configure.in: Bump version to 0.10.1, update LSMDATE.

2003-06-08  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c (text_entry_key_press_cb): Patch from Robin to fix the
	PageUp/PageDown segfault, by using the Vte function instead of the
	scrolled_window one.

	* doc/gnome-mud-manual/C/gnome-mud-manual.xml: Fix DTD declaration.
	* doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api.xml: Likewise.

	* NEWS: Updated.

2003-06-06  Jordi Mallach  <jordi@sindominio.net>

	* src/net.c (read_from_connection): Patch from Vashti, fixes a crash
	in connections with no profile set.

2003-06-05  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Updated, docs are finally working.

2003-06-05  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c: Remove fixed FIXMEs.

	* BUGS: Add a few known issues.

2003-06-05  Abigail Brady  <morwen@evilmagic.org>

	* src/map.c, net.c, prefs.c, map-link.c: Backport to C90, which has
	declarations before code.

	* src/prefs.c: Kill a segfault if there are no saved colour palette
	settings.

Wed Jun  4 19:53:54 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* doc/gnome-mud-manual/C/topic.dat: Removed.
	* doc/gnome-mud-plugin-api/C/topic.dat: Removed.
	* doc/xmldocs.make: change docdir to install the manuals into
	$(datadir)/gnome/help/$(PACKAGE)/$(lang), so gnome_help_display finds
	the documentation.

	* src/Makefile.am: Switch to a more common layout without a special
	target for gnome-mud.o.

Wed Jun  4 19:00:20 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* src/Makefile.am: Pass a few needed variables at compile time.
	
	* src/gnome-mud.c (main): Init gnome properly with gnome_program_init.
	
	* src/init.c (window_menu_help_manual_activate_cb): Show an error